# dbt-cicd-github

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: dbt-ci.yml
dbt/cicd_github/: .gitignore  dbt_project.yml  profiles.yml
dbt/cicd_github/macros/cicd/: create_database.sql  drop_database.sql  generate_custom‎_schema_name.sql
dbt/cicd_github/models/staging/: _staging_models.yml  stg_model_1.sql
